fix: (Picker) mask blink on iOS safari

--- a/src/components/picker-view/picker-view.less
+++ b/src/components/picker-view/picker-view.less
@@ -15,6 +15,7 @@
   user-select: none;
   touch-action: none;
   position: relative;
+  z-index: 0;
   &-wheel {
     width: 100%;
     cursor: grab;
@@ -55,13 +56,26 @@
 
 .@{class-prefix-picker-view}-mask {
   position: absolute;
+  z-index: 100;
   left: 0;
+  top: 0;
   width: 100%;
-  height: calc(50% - 12px);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   pointer-events: none;
-  &-top {
-    top: -5px;
+  &-top,
+  &-bottom {
+    flex: auto;
+  }
+  &-middle {
+    height: 34px;
+    box-sizing: border-box;
+    flex: none;
+    border-top: solid 1px var(--adm-border-color);
     border-bottom: solid 1px var(--adm-border-color);
+  }
+  &-top {
     background: linear-gradient(
       0deg,
       rgba(255, 255, 255, 0.7) 50%,
@@ -69,8 +83,6 @@
     );
   }
   &-bottom {
-    bottom: -5px;
-    border-top: solid 1px var(--adm-border-color);
     background: linear-gradient(
       180deg,
       rgba(255, 255, 255, 0.7) 50%,
